--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -30,11 +30,17 @@
   background-color: rgba(141, 141, 141, 0.6);
   border-radius: 30px;
   align-items: center;
-  transition: all 0.5s;
+  transition: all 1s;
 }
-.login main form div {
+.login main form .title {
   font-size: 26px;
   margin-top: 30px;
+}
+.login main form .tips {
+  width: 70%;
+  font-size: 12px;
+  color: #fa0000;
+  margin: 6px 0 0 0;
 }
 .login main form input {
   width: 70%;
@@ -44,9 +50,10 @@
   padding: 0 10px;
 }
 .login main form button {
-  margin-top: 50px;
+  margin-top: 30px;
   width: 50%;
   height: 30px;
+  border-radius: 10px;
 }
 @media screen and (max-width: 600px) {
   .login main form {
