--- a/src/components/left-nav/index.less
+++ b/src/components/left-nav/index.less
@@ -3,11 +3,14 @@
     .left-nav-header{
         height: 80px;
     }
-    h2{
+    h1{
         color: white;
         text-align: center;
         padding: 20px;
         width: 100%;
         background-color: #001c3f;
+        font-size: 20px;
+        height: 80px;
+        line-height: 40px;
     }
 }
