--- a/src/pages/admin/admin.less
+++ b/src/pages/admin/admin.less
@@ -3,8 +3,7 @@
     .left-nav{
         color: #fff;
     }
-    footer{
-        height: 30px;
-        text-align: center;
+    .content{
+        overflow-y: auto;
     }
 }
