--- a/src/components/product/productContent.css
+++ b/src/components/product/productContent.css
@@ -4,3 +4,8 @@
 .product-content .card {
   padding: 10px 25px;
 }
+.product-content .editable-row .ant-form-item-explain {
+  position: absolute;
+  top: 100%;
+  font-size: 12px;
+}
