--- a/src/components/product/productContent.less
+++ b/src/components/product/productContent.less
@@ -1,8 +1,15 @@
-.product-content{
-    hr{
+.product-content {
+    hr {
         color: rgba(196, 196, 196, 0.4);
     }
-    .card{
+
+    .card {
         padding: 10px 25px;
+    }
+
+    .editable-row .ant-form-item-explain {
+        position: absolute;
+        top: 100%;
+        font-size: 12px;
     }
 }
