--- a/src/pages/admin/admin.css
+++ b/src/pages/admin/admin.css
@@ -4,7 +4,6 @@
 .Layout .left-nav {
   color: #fff;
 }
-.Layout footer {
-  height: 30px;
-  text-align: center;
+.Layout .content {
+  overflow-y: auto;
 }
